--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=simple-notes-api
+
+spring.datasource.name= notes_api
+spring.datasource.url = jdbc:mysql://localhost:3306/notes_api
+spring.datasource.username= root
+spring.datasource.password = admin
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+#simple-notes-api.application.jwtSecretKey = "9kjdn94dnfjsndn34353ksad4da9asfkjsdn4dsns45kandsj3sf5n6d"
+#JPA
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+server.port=8081
