--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 #JPA
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-
+spring.jpa.open-in-view=true
 #debug=true
 
 server.port=8081
